--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Home</title>
-</head>
-<body>
-	<h1>Home Page</h1>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}
+Home
+{% endblock %}
+
+{% block content %}
+<h1>Welcome to home page</h1>
+{% endblock %}
