--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Login</title>
-</head>
-<body>
-	<h1>Login</h1>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}
+Login
+{% endblock %}
+
+{% block content %}
+	<form method="POST">
+	  <h3 align="center">Login</h3>
+	  <div class="form-group">
+	    <label for="email">Email Address</label>
+	    <input
+	      type="text"
+	      id="email"
+	      name="email"
+	      class="form-control"
+	      placeholder="Enter Email"
+	    />
+	    <label for="password">Password</label>
+	    <input
+	      type="password"
+	      id="password"
+	      name="password"
+	      class="form-control"
+	      placeholder="Enter Password"
+	    />
+	    <br />
+	    <div>
+	      <button class="btn btn-primary" type="submit">Login</button>
+	    </div>
+	  </div>
+	</form>
+{% endblock %}
