--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,8 +27,12 @@
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="/home">Home</a>
-            <a class="nav-item nav-link" href="/login">Login</a>
-            <a class="nav-item nav-link" href="/signup">Sign Up</a>
+            {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="/logout">Logout</a>
+            {% else %}
+              <a class="nav-item nav-link" href="/login">Login</a>
+              <a class="nav-item nav-link" href="/signup">Sign Up</a>
+            {% endif %}
           </div>
         </div>
       </div>
