--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -5,5 +5,17 @@ Create Post
 {% endblock %}
 
 {% block content %}
+
 <h1>Make a post</h1>
+
+<form method="POST">
+	<textarea name="text" id="text" class="form-control">
+	</textarea>
+	<br>
+	<br>
+
+	<div align="center">
+		<button type="submit" class="btn btn-lg btn-primary">Post</button>
+	</div>
+</form>
 {% endblock %}
