--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -6,8 +6,9 @@ Create Post
 
 {% block content %}
 
-<h1>Make a post</h1>
+<h1 align="center">Make a post</h1>
 
+<br>
 <form method="POST">
 	<textarea name="text" id="text" class="form-control">
 	</textarea>
@@ -18,4 +19,12 @@ Create Post
 		<button type="submit" class="btn btn-lg btn-primary">Post</button>
 	</div>
 </form>
+<br>
+<div align="center">
+	<a href="/home">
+		<button type="button" class="btn btn-secondary btn-lg">
+			Back
+		</button>
+	</a>
+</div>
 {% endblock %}
