--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -29,6 +29,18 @@
         <div class="card-text">{{post.text}}</div>
       </div>
       <div class="card-footer text-muted">{{post.date_created}}</div>
+      <br>
+
+      <form class="input-group mb-3" method="POST" action="/create-comment/{{ post.id }}">
+        <input 
+          type="text" id="text" 
+          name="text" 
+          class="form-control" 
+          placeholder="Comment something!">
+        <button type="submit" class="btn btn-primary">
+          Comment
+        </button>
+      </form>
     </div>
     <br/ > {% endfor %}
   </div>
